# PilotBell

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
docs/: roadmap.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/document/: excel.rs  markdown.rs  mod.rs  pdf.rs  svg.rs  word.rs  workflow.rs
src/components/: AppChrome.tsx  ChromeActions.tsx  DocumentWorkflowPanel.tsx  ProgressPanel.tsx  PromptComposer.tsx  ProviderSelector.tsx  SessionHistory.tsx  SettingsPanel.tsx  StatusLine.tsx  WindowControls.tsx
src/domain/: document.ts  inputPreferences.ts  prompt.ts  provider.ts  source.ts
src/hooks/: useAutoResizeTextarea.ts  useDocumentJobs.ts  usePromptSubmitHotkey.ts
src/lib/: documentJobStore.ts  inputPreferenceStore.ts  providerHealthStore.ts  providerStore.ts  sessionStore.ts  sourceIndexStore.ts  sourceStore.ts  themeStore.ts
