[package]
name = "pilotbell"
version = "0.2.0"
description = "PilotBell Rust-native document processing desktop tool"
authors = ["4i7"]
license = "MIT"
homepage = "https://github.com/4i7/PilotBell"
repository = "https://github.com/4i7/PilotBell"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "pilotbell_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
lopdf = { version = "0.40.0", default-features = false }
calamine = "0.35.0"
docx-rs = "0.4.20"
quick-xml = "0.40.1"
tauri-plugin-dialog = "2.7.1"

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-window-state = "2"

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-window-state = "2"

[target.'cfg(any(target_os = "linux", target_os = "freebsd", target_os = "openbsd"))'.dependencies]
keyring = { version = "3", features = ["sync-secret-service"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-window-state = "2"
